# advent-of-code-2025

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  uv-auto-sync.sh
solutions/: 00.ipynb  01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb
