[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "pulp>=3.3.0",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = []

[tool.pyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
